err/pygling.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pygling'...
Listing './lib/python3.5/site-packages/Pygling/Builder'...
Compiling './lib/python3.5/site-packages/Pygling/Env.py'...
***   File "./lib/python3.5/site-packages/Pygling/Env.py", line 38
    print 'Env var {0} changed to {1}'.format( name, value )
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Pygling/Generator'...
Listing './lib/python3.5/site-packages/Pygling/Generator/Eclipse'...
Compiling './lib/python3.5/site-packages/Pygling/Generator/Eclipse/Android.py'...
***   File "./lib/python3.5/site-packages/Pygling/Generator/Eclipse/Android.py", line 73
    print 'Warning: workspace does not contain any executables, the Eclipse project wont be generated'
                                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Pygling/Generator/Extensions'...
Compiling './lib/python3.5/site-packages/Pygling/Generator/Generator.py'...
***   File "./lib/python3.5/site-packages/Pygling/Generator/Generator.py", line 277
    print 'Error: unknown library', library.name
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Pygling/Generator/Make'...
Compiling './lib/python3.5/site-packages/Pygling/Generator/Make/Make.py'...
***   File "./lib/python3.5/site-packages/Pygling/Generator/Make/Make.py", line 183
    print "Make::getExtensionForTarget : unknown target type '{0}'".format( target.type )
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Pygling/Generator/VisualStudio'...
Listing './lib/python3.5/site-packages/Pygling/Generator/VisualStudio/VCX'...
Compiling './lib/python3.5/site-packages/Pygling/Generator/VisualStudio/Windows.py'...
***   File "./lib/python3.5/site-packages/Pygling/Generator/VisualStudio/Windows.py", line 84
    print 'Error: unknown library type', library.type
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Pygling/Generator/Xcode'...
Listing './lib/python3.5/site-packages/Pygling/Generator/Xcode/PBX'...
Compiling './lib/python3.5/site-packages/Pygling/Generator/Xcode/Xcode5.py'...
***   File "./lib/python3.5/site-packages/Pygling/Generator/Xcode/Xcode5.py", line 229
    print 'Error: unknown library', library.name
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Pygling/Globals.py'...
***   File "./lib/python3.5/site-packages/Pygling/Globals.py", line 42
    print 'Error:', name, 'is required'
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Pygling/Platform'...
Compiling './lib/python3.5/site-packages/Pygling/Platform/Platform.py'...
***   File "./lib/python3.5/site-packages/Pygling/Platform/Platform.py", line 102
    print 'Warning: header search path doesnt exist', path
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Pygling/Platform/Xcode.py'...
***   File "./lib/python3.5/site-packages/Pygling/Platform/Xcode.py", line 76
    print 'Error: failed to parse property from', path
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Pygling/Target'...
Compiling './lib/python3.5/site-packages/Pygling/Target/Folder.py'...
***   File "./lib/python3.5/site-packages/Pygling/Target/Folder.py", line 65
    print 'Warning: duplicated file reference', fileName
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Pygling/Workspace.py'...
***   File "./lib/python3.5/site-packages/Pygling/Workspace.py", line 122
    print 'Installing', os.path.basename(file)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygling-0.8.17.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
